Add more refactoring